force-app/main/default/objects/Operation_report__c/Operation_report__c.object-meta.xml
<CustomObject>
    <label>運行報告</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>運行報告名</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>