force-app/main/default/objects/Operation_report__c/fields/category__c.field-meta.xml
<CustomField>
    <fullName>category__c</fullName>
    <label>種別</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>事故</fullName>
            </value>
            <value>
                <fullName>違反</fullName>
            </value>
            <value>
                <fullName>危険運転</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>