force-app/main/default/objects/Operation_report__c/fields/DayOfWeek__c.field-meta.xml
<CustomField>
    <fullName>DayOfWeek__c</fullName>
    <formula>CASE( WEEKDAY(DATEVALUE( occurred_datetime__c  )) ,
1,&quot;日曜日&quot;,
2,&quot;月曜日&quot;,
3,&quot;火曜日&quot;,
4,&quot;水曜日&quot;,
5,&quot;木曜日&quot;,
6,&quot;金曜日&quot;,
7,&quot;土曜日&quot;,
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>曜日</label>
    <type>Text</type>
</CustomField>