force-app/main/default/objects/Operation_report__c/fields/department__c.field-meta.xml
<CustomField>
    <fullName>department__c</fullName>
    <formula>IF( CONTAINS( driver__r.UserRole.Name  , &quot;マネージャ&quot;), SUBSTITUTE(driver__r.UserRole.Name , &quot;マネージャ&quot;,&quot;&quot;) , driver__r.UserRole.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>所属</label>
    <type>Text</type>
</CustomField>