force-app/main/default/objects/Operation_report__c/fields/detail__c.field-meta.xml
<CustomField>
    <fullName>detail__c</fullName>
    <description>複数選択リストに切り替えるために新規作成。山本</description>
    <label>内容</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>category__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>人身</fullName>
            </value>
            <value>
                <fullName>対物</fullName>
            </value>
            <value>
                <fullName>その他事故</fullName>
            </value>
            <value>
                <fullName>携帯関連</fullName>
            </value>
            <value>
                <fullName>一時停止違反</fullName>
            </value>
            <value>
                <fullName>スピード違反</fullName>
            </value>
            <value>
                <fullName>駐車禁止</fullName>
            </value>
            <value>
                <fullName>その他違反</fullName>
            </value>
            <value>
                <fullName>危険運転</fullName>
            </value>
            <value>
                <fullName>スピード注意</fullName>
            </value>
            <value>
                <fullName>前方不注意</fullName>
            </value>
            <value>
                <fullName>後方不注意​</fullName>
            </value>
            <value>
                <fullName>一時停止注意</fullName>
            </value>
            <value>
                <fullName>車間距離注意</fullName>
            </value>
            <value>
                <fullName>急ブレーキ</fullName>
            </value>
            <value>
                <fullName>急発進</fullName>
            </value>
            <value>
                <fullName>その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>