force-app/main/default/objects/Operation_report__c/fields/driver__c.field-meta.xml
<CustomField>
    <fullName>driver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>運転者</label>
    <referenceTo>User</referenceTo>
    <relationshipName>driver</relationshipName>
    <type>Lookup</type>
</CustomField>