force-app/main/default/objects/Operation_report__c/fields/Guidance__c.field-meta.xml
<CustomField>
    <fullName>Guidance__c</fullName>
    <label>指導</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>a.口頭</fullName>
            </value>
            <value>
                <fullName>b.同行</fullName>
            </value>
            <value>
                <fullName>c.その他</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>