force-app/main/default/objects/Operation_report__c/fields/Guidance_content__c.field-meta.xml
<CustomField>
    <fullName>Guidance_content__c</fullName>
    <description>山本</description>
    <label>指導内容</label>
    <type>TextArea</type>
</CustomField>