force-app/main/default/objects/Operation_report__c/fields/ID_18__c.field-meta.xml
<CustomField>
    <fullName>ID_18__c</fullName>
    <description>山本</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>運行報告ID（18ケタ）</label>
    <type>Text</type>
</CustomField>