force-app/main/default/objects/Operation_report__c/fields/manager__c.field-meta.xml
<CustomField>
    <fullName>manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>マネージャー</label>
    <referenceTo>User</referenceTo>
    <relationshipName>manager</relationshipName>
    <type>Lookup</type>
</CustomField>