force-app/main/default/objects/Operation_report__c/fields/occurred_datetime__c.field-meta.xml
<CustomField>
    <fullName>occurred_datetime__c</fullName>
    <label>発生日時</label>
    <type>DateTime</type>
</CustomField>