force-app/main/default/objects/Operation_report__c/fields/Occurred_Month__c.field-meta.xml
<CustomField>
    <fullName>Occurred_Month__c</fullName>
    <description>発生日時の月を取得。山本</description>
    <formula>TEXT( MONTH( DATEVALUE(occurred_datetime__c) ) )</formula>
    <label>発生月</label>
    <type>Text</type>
</CustomField>