force-app/main/default/objects/Operation_report__c/fields/occurredplace__c.field-meta.xml
<CustomField>
    <fullName>occurredplace__c</fullName>
    <label>発生場所</label>
    <length>30</length>
    <type>Text</type>
</CustomField>