force-app/main/default/objects/Operation_report__c/fields/Occurrence_time__c.field-meta.xml
<CustomField>
    <fullName>Occurrence_time__c</fullName>
    <formula>IF( AND( TEXT( TIMEVALUE (  occurred_datetime__c )+ 3600000 * 9)  &gt;= &quot;00:00:00.000&quot; ,TEXT( TIMEVALUE (  occurred_datetime__c )+ 3600000 * 9)  &lt; &quot;09:59:59.000&quot;) ,&quot;10:00より前&quot;,
IF( AND( TEXT( TIMEVALUE (  occurred_datetime__c )+ 3600000 * 9)  &gt;= &quot;10:00:00.000&quot;,TEXT( TIMEVALUE (  occurred_datetime__c )+ 3600000 * 9)  &lt;&quot;13:00:00.000&quot;),&quot;10:00～13:00&quot;,
IF( AND( TEXT( TIMEVALUE (  occurred_datetime__c )+ 3600000 * 9)  &gt;= &quot;13:00:00.000&quot;,TEXT( TIMEVALUE (  occurred_datetime__c )+ 3600000 * 9)  &lt; &quot;18:00:00.000&quot;),&quot;13:00～18:00&quot;,
IF( TEXT( TIMEVALUE (  occurred_datetime__c )+ 3600000 * 9)  &gt;= &quot;18:00:00.000&quot;,&quot;18:00以降&quot;,null))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>発生時間帯</label>
    <type>Text</type>
</CustomField>