force-app/main/default/objects/Operation_report__c/fields/Reflectionletter__c.field-meta.xml
<CustomField>
    <fullName>Reflectionletter__c</fullName>
    <description>山本</description>
    <label>反省文</label>
    <type>TextArea</type>
</CustomField>