force-app/main/default/objects/Operation_report__c/fields/report__c.field-meta.xml
<CustomField>
    <fullName>report__c</fullName>
    <description>山本</description>
    <label>報告内容</label>
    <type>TextArea</type>
</CustomField>