force-app/main/default/objects/Operation_report__c/fields/Retired__c.field-meta.xml
<CustomField>
    <fullName>Retired__c</fullName>
    <description>ユーザーの有効チェックボックスがTrueであればFalseを返す、FalseであればTrueを返す。山本</description>
    <formula>IF( driver__r.IsActive ,False,True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>退職済み</label>
    <type>Checkbox</type>
</CustomField>