force-app/main/default/objects/Operation_report__c/fields/to_accident_date__c.field-meta.xml
<CustomField>
    <fullName>to_accident_date__c</fullName>
    <formula>DATEVALUE( occurred_datetime__c) - driver__r.license_acquisition_date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>免許取得日から事故日まで</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>