force-app/main/default/objects/Operation_report__c/fields/VideoURL__c.field-meta.xml
<CustomField>
    <fullName>VideoURL__c</fullName>
    <description>山本</description>
    <label>動画URL</label>
    <type>Url</type>
</CustomField>