force-app/main/default/objects/Operation_report__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>occurred_datetime__c</columns>
    <columns>driver__c</columns>
    <columns>department__c</columns>
    <columns>manager__c</columns>
    <columns>category__c</columns>
    <columns>report__c</columns>
    <columns>Reflectionletter__c</columns>
    <columns>Guidance__c</columns>
    <columns>Guidance_content__c</columns>
    <filterScope>Everything</filterScope>
    <label>すべて選択</label>
</ListView>